fix fontawesome heart error

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     }
   </style>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <script type="text/javascript">
       // Force `fetch` polyfill to workaround Chrome not displaying request body
       // in developer tools for the native `fetch`.
